syntax = "proto3";

package example;

// Serviço CRUD de usuários
service UserService {
  rpc CreateUser (User) returns (User);
  rpc GetUser (UserId) returns (User);
  rpc ListUsers (Empty) returns (stream User);
  rpc UpdateUser (User) returns (User);
  rpc DeleteUser (UserId) returns (Empty);
}

// Mensagens
message User {
  string id = 1;
  string name = 2;
  int32 age = 3;
}

message UserId {
  string id = 1;
}

message Empty {}